--- a/resume_style.css
+++ b/resume_style.css
@@ -330,7 +330,7 @@ footer {
 /* === Dark Mode === */
 body.dark-mode {
   background-color: #1e1e1e;
-  color: #f0f0f0;
+  color: black;
 }
 
 body.dark-mode header,
