--- a/about_style.css
+++ b/about_style.css
@@ -187,7 +187,7 @@ footer {
 /* === Dark Mode === */
 body.dark-mode {
   background-color: #1e1e1e;
-  color: black;
+  color: white;
 }
 
 body.dark-mode header,
