--- a/game_style.css
+++ b/game_style.css
@@ -58,9 +58,7 @@ nav a:hover {
 }
 
 .game-container {
-  display: flex;
-  justify-content: center;
-  margin: 2rem 0;
+  position: relative;
 }
 
 canvas {
@@ -76,7 +74,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 243, 230, 0.95);
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
