--- a/game_style.css
+++ b/game_style.css
@@ -93,7 +93,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 243, 230, 0.95);
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
